<resources>
    <string name="app_name">El Grimy\'s</string>

    <!--  MENU DO MAIN ACTIVITY  -->
    <string name="menu_cliente_cardapio">Cardápio</string>
    <string name="menu_cliente_pedidos">Pedidos</string>

    <!--  SPLASH ACTIVITY  -->
    <string name="splash_description_logo">Logo do El Grimy\'s</string>

    <!--  LOGIN CLIENTE ACTIVITY  -->
    <string name="login_clie_entrar_cliente">Entrar como cliente:</string>
    <string name="login_clie_hint_email">Email:</string>
    <string name="login_clie_hint_senha">Senha:</string>
    <string name="login_clie_description_seta">Seta para logar como funcionario</string>
    <string name="login_clie_tv_logar">Logar</string>
    <string name="login_clie_tv_mudar_login">Entrar como Funcionário</string>
    <string name="login_clie_erro_email_senha">Email ou senha estão incorretos</string>

    <!--  EM AMBOS LOGINS  -->
    <string name="logins_campo_obrigatorio">Esse campo é obrigatório</string>

    <!--  LOGIN FUNC ACTIVITY  -->
    <string name="login_func_hint_cpf">CPF:</string>
    <string name="login_func_entrar_func">Entrar como Funcionário:</string>
    <string name="login_func_tv_mudar_login">Entrar como Cliente</string>

    <!--  MAIN ACTIVITY  -->
    <string name="main_header_cardapio">Nosso Cardápio</string>

    <!--  FRAGMENT CARDAPIO  -->
    <string name="fragment_cardapio_desc_img">Imagem do carrinho</string>

    <!--  FRAGMENT CARDAPIO SIMPLE ITEM  -->
    <string name="fragment_cardapio_item_btn_name">Adicionar ao carrinho</string>
    <string name="fragment_cardapio_item_description_img">Imagem do produto</string>

    <!--  ADAPTER PRODUTO  -->
    <string name="categoria_id_0_porcoes">Porções e petiscos</string>
    <string name="categoria_id_1_espetos">Espetinhos</string>
    <string name="categoria_id_2_doses">Bebidas vendidas em dose</string>
    <string name="categoria_id_3_vinhos">Vinhos</string>
    <string name="categoria_id_4_sucos">Sucos</string>
    <string name="categoria_id_5_latas">Bebidas de lata ou garrafas individuais</string>
    <string name="categoria_id_6_coqueteis">Coquetéis</string>
    <string name="adapter_produto_alert">Produto adicionado com sucesso!</string>

    <!--  FRAGMENT CARRINHO  -->
    <string name="fragment_carrinho_text_total">Valor total de produtos</string>
    <string name="fragment_carrinho_button_pedido">Fazer pedido</string>

    <!--  FRAGMENT CARRINHO ITEM -->
    <string name="fragment_carrinho_item_desc_img_mais">Imagem para adicionar mais produtos</string>
    <string name="fragment_carrinho_item_desc_img_menos">Imagem para tirar produtos</string>
    <string name="fragment_carrinho_item_qtd_item_inicial">1</string>

</resources>
