<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:elevation="100dp"

    android:background="@drawable/border_chocolate_radius20">

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/iv_profile"
        android:layout_width="50dp"
        android:layout_height="40dp"

        android:layout_marginTop="10dp"
        android:elevation="50dp"

        android:layout_marginStart="5dp"
        android:src="@drawable/logo_main"
        android:contentDescription="@string/splash_description_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

    />

    <LinearLayout

        android:id="@+id/ll_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView

            android:id="@+id/iv_img_produto"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:src="@drawable/batata_frita"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/fragment_cardapio_item_description_img"

        />

        <TextView

            android:id="@+id/tv_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            tools:text="Porções e peticos"
            android:lines="2"
            android:textStyle="italic"
            android:textColor="@color/chocolate"

            android:gravity="center"
            android:background="@drawable/border_chocolate"

        />


        <TextView

            android:id="@+id/tv_name_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"

            tools:text="Batata frita especial (queijo/chedar, bacon )"
            android:textSize="15sp"
            android:textColor="@color/chocolate"

            android:padding="5dp"
            android:gravity="center"

        />

        <TextView

            android:id="@+id/tv_preco_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"

            android:gravity="center"

            tools:text="R$24,90"
            android:textSize="15sp"
            android:textColor="@color/chocolate"

        />

        <TextView

            android:id="@+id/btn_add_carrinho"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"

            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/fragment_cardapio_item_btn_name"

            android:gravity="center"
            android:background="@drawable/border_bottom_radius_20_backgroud_chocolate"

        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>